--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+--extra-index-url https://download.pytorch.org/whl/cu117
+torch==2.0.0+cu117
+torchvision==0.15.2+cu117
+torchaudio==2.0.2+cu117
 accelerate==0.15.0
 transformers==4.26.0
 ftfy==6.1.1
